--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.0.17",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
     "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -21,6 +25,7 @@
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.17",
     "wav-encoder": "^1.3.0",
     "wavesurfer.js": "^7.9.4"
@@ -41,6 +46,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vite": "^6.2.0",
     "web-vitals": "^5.1.0"
